tests/negative/neg_rule5_nan.safe
-- Test: neg_rule5_nan
-- Description: NaN surviving a narrowing point (assignment).
--   Computes 0.0 / 0.0 which is NaN under IEEE 754 non-trapping semantics,
--   then assigns the result to a typed variable. The NaN cannot survive
--   the narrowing.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.5.p139d:56f1f36b
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.5.p139c:7fad4f7d
-- Expected: REJECT nan_at_narrowing

package NaN_Test

   type Temp is digits 6 range -100.0 to 100.0;

   --  Produce_NaN: 0.0 / 0.0 is NaN. Assigning to Temp is a narrowing
   --  point where NaN is not allowed.
   function Produce_NaN returns Temp
      X : Long_Float = 0.0;
      Y : Long_Float = 0.0;

      return Temp (X / Y);  -- ERROR: 0.0/0.0 = NaN, cannot narrow

